--- a/package.json
+++ b/package.json
@@ -8,36 +8,20 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "watch-db": "json-server db.json"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@heroicons/react": "^2.1.1",
-    "@supabase/supabase-js": "^2.39.7",
-    "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.2",
-    "swr": "^2.2.5",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
-    "@storybook/test": "^7.6.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
