--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "watch-db": "json-server db.json"
+    "serve-db": "json-server db.json"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
